# black-box-unlock

./: .gitignore  .markdownlint-cli2.jsonc  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/agents/: git-forensics.md
.claude-plugin/commands/: analyze.md  hotspots.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  osv-scanner.yml  release.yml
.planning/: beads-daemon-incident.md
.planning/superpowers/plans/: 2026-06-12-agent-native-pivot.md  2026-06-12-function-xray.md  2026-06-12-hotspot-validation.md
.planning/superpowers/specs/: 2026-06-12-function-xray-design.md  (+1 more)
agents/: git-forensics.md
commands/: analyze.md
docs/: ARCHITECTURE.md  CODEMAP.md  VALIDATION.md  XRAY.md
docs/plans/: 2026-01-25-analyze-repo-design.md  2026-01-25-file-churn-design.md  2026-01-25-ownership-spread-design.md  2026-01-25-temporal-coupling-design.md  2026-01-25-temporal-coupling-graph-design.md  2026-01-25-treemap-heatmap-design.md  2026-01-26-cicd-build-failures-design.md  2026-01-26-cicd-build-failures-impl.md  2026-01-26-coupling-graph-redesign.md  2026-01-26-flaky-step-detection-design.md
hooks/: hooks.json
src/black_box_unlock/: __init__.py  analysis.py  cli.py  complexity.py  guard.py  mcp_server.py  spans.py  validation.py
tests/: conftest.py  factories.py
tests/fixtures/: sample_gmap_output.json
tests/integration/: test_git_churn.py  test_xray.py
tests/unit/: test_analysis.py  test_cli.py  test_complexity.py  test_guard.py  test_logging.py  test_mcp_server.py  test_ownership.py  test_spans.py  test_temporal_coupling.py  test_validation.py
(+30 files in other folders)
