[project]
name = "black-box-unlock"
version = "0.2.0"
description = "Code forensics tool - investigate your codebase like a crime scene"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Michael Denyer", email = "michael@denyer.dev" }
]
keywords = ["code-forensics", "git-analysis", "technical-debt", "hotspots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bbu = "black_box_unlock.cli:app"

[project.urls]
Homepage = "https://github.com/michael-denyer/black-box-unlock"
Repository = "https://github.com/michael-denyer/black-box-unlock"
Issues = "https://github.com/michael-denyer/black-box-unlock/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/black_box_unlock"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]  # B008: typer.Option in function defaults is idiomatic

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
